# Minesweeper

./: CMakeLists.txt  README.md  main.cpp
src/: Adresse.cpp  Adresse.h  Angestellter.cpp  Angestellter.h  Datum.h  Game.cpp  Game.hpp  GameRenderer.cpp  GameRenderer.hpp  Krankenhaus.cpp  Krankenhaus.h  Menu.cpp  Menu.hpp  Patient.cpp  Patient.h  Terminkalender.cpp  Terminkalender.h  style.h  test.css
src/Behandlungen/: Behandlung.cpp  Behandlung.h  BehandlungTypen.h
src/Personen/: Angestellter.cpp  Angestellter.h  Patient.h
