cmake_minimum_required(VERSION 3.22.1)
project(AdvancedC)

set(CMAKE_CXX_STANDARD 23)

add_executable(AdvancedC
       # src/Behandlungen/Behandlung.h
        #src/Krankenhaus.cpp
        #src/Krankenhaus.h
       # #src/Personen/Patient.cpp
       # src/Personen/Patient.h
       # src/Personen/Angestellter.cpp
      #  src/Personen/Angestellter.h
       # src/Terminkalender.cpp
        #src/Terminkalender.h
        #src/Personen/Patient.h
       # src/Krankenhaus.h
       # src/Personen/Angestellter.h
       # src/Adresse.h
       # src/Behandlungen/Behandlung.cpp
       # src/Behandlungen/BehandlungTypen.h
       # src/Datum.h
        main.cpp)
